bootstrap/demo/federated/buttonmasher-service.yaml
# Copyright 2016 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
################################################################################

kind: Service
apiVersion: v1
metadata:
  name: buttonmasher-frontend
  labels:
    app: buttonmasher-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: buttonmasher-frontend
  type: LoadBalancer
---
kind: Service
apiVersion: v1
metadata:
  name: buttonmasher-backend
  labels:
    app: buttonmasher-backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: buttonmasher-backend
  type: LoadBalancer
---
kind: Service
apiVersion: v1
metadata:
  name: buttonmasher-visualizer
  labels:
    app: buttonmasher-visualizer
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: buttonmasher-visualizer
  type: LoadBalancer
---
kind: Service
apiVersion: v1
metadata:
  name: buttonmasher-aggregator
  labels:
    app: buttonmasher-aggregator
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: buttonmasher-aggregator
  type: LoadBalancer
---
